<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Genre"
        android:textSize="21sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/CS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comp"
            android:layout_margin=".5dp"/>

        <Button
            android:id="@+id/Fiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fic"
            android:layout_margin=".5dp"/>

        <Button
            android:id="@+id/Memoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meme"
            android:layout_margin=".5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

</LinearLayout>